fixes css spacing error

--- a/Style.css
+++ b/Style.css
@@ -413,9 +413,10 @@ nav a:hover:after {
 
 .swiper-centered.swiper-horizontal>.swiper-wrapper>.swiper-slide:first-child {
     -webkit-margin-start: var(--swiper-centered-offset-before);
-    margin-inline-start:var(--swiper-centered-offset-before)}
+    margin-inline-start:var(--swiper-centered-offset-before)
+}
 
-.swiper-centered.swiper-horizontal>.swiper-wrapper: before {
+.swiper-centered.swiper-horizontal>.swiper-wrapper:before {
     height:100%;
     min-height: 1px;
     width: var(--swiper-centered-offset-after)
@@ -423,9 +424,10 @@ nav a:hover:after {
 
 .swiper-centered.swiper-vertical>.swiper-wrapper>.swiper-slide:first-child {
     -webkit-margin-before: var(--swiper-centered-offset-before);
-    margin-block-start:var(--swiper-centered-offset-before)}
+    margin-block-start:var(--swiper-centered-offset-before)
+}
 
-.swiper-centered.swiper-vertical>.swiper-wrapper: before {
+.swiper-centered.swiper-vertical>.swiper-wrapper:before {
     height:var(--swiper-centered-offset-after);
     min-width: 1px;
     width: 100%
